--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-#Exclude tsc generated files
-js/*.map
-js/ts.js
+# Ignores compiled TypeScript files
+**/wwwroot/app/**/*.map
+**/wwwroot/app/**/*.js
